# symspell_rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
data/: license.txt
src/: lib.rs  symspell.rs  test.rs
